cmake_minimum_required(VERSION 3.6)
project(VoroTop)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_subdirectory(lib/googletest-master)
include_directories(lib/googletest-master/googletest/include)
include_directories(lib/googletest-master/googlemock/include)

#find_package(Boost 1.58.0 COMPONENTS system filesystem REQUIRED)
#include_directories(${Boost_INCLUDE_DIRS})
#add_executable(BoostTest main.cpp)
#target_link_libraries(BoostTest ${Boost_LIBRARIES})
#include_directories(${tests})
set(SOURCE_FILES main.cpp tests/EdgeOrderingTest.cpp tests/WeinbergAlgorithmTest.cpp VoronoiCell.cpp Input.cpp FacesToGraph.cpp Graph/Face.cpp Graph/Edge.cpp Graph/Vertex.cpp Graph/Graph.cpp WeinbergAlgorithm WeinbergAlgorithm/WeinbergVector.cpp WeinbergAlgorithm/WeinbergGraph.cpp WeinbergAlgorithm/WeinbergEdge.cpp WeinbergAlgorithm/WeinbergVertex.cpp tests/NeighborsTest.cpp .idea/Complex.cpp)
add_executable(VoroTop ${SOURCE_FILES} tests/NeighborsTest.cpp)
target_link_libraries(VoroTop gtest gtest_main)
